index html body done

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes | Featuring Apples!</title>
 </head>
 <body>
-    
+    <h1>Odin Recipes</h1>
+    <p>The document contains collected recipes with apples as main ingredient!</p>
+    <img src="./images/appleBasket.jpg" alt="apples">
+    <div>
+        <ul><a href="appleSquares.html">Apple Squares</a></ul>
+        <ul><a href="appleLiqueur.html">Apple Liqueur</a></ul>
+        <ul><a href="appleButter.html">Apple Butter</a></ul>
+    </div>
 </body>
 </html>
