appleSquares html body done

--- a/recipes/appleSquares.html
+++ b/recipes/appleSquares.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Apple Squares | Odin Recipes</title>
 </head>
 <body>
-    
+    <h1>Apple Squares</h1>
+    <img src="../images/appleSquares.jpg" height="500px">
+    <p>These easy apple bars made with fresh apples, nuts, and cinnamon are delicious. They hardly last a day at my house!</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>cup sifted all-purpose flour</li>
+        <li>1 teaspoon baking powder</li>
+        <li>¼ teaspoon salt</li>
+        <li>2 ¼ teaspoons ground cinnamon</li>
+        <li>2 tablespoons white sugar</li>
+        <li>½ cup packed brown sugar</li>
+        <li>½ cup white sugar</li>
+        <li>¼ cup unsalted butter, melted</li>
+        <li>1 large egg</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>½ cup chopped apple</li>
+        <li>½ cup finely chopped walnuts</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Grease a 9-inch square pan.</li>
+        <li>Sift flour, baking powder, salt, and 1/4 teaspoon of cinnamon into a medium bowl. Stir 2 tablespoons white sugar and remaining 2 teaspoons cinnamon together in a small bowl.</li>
+        <li>Mix brown sugar, 1/2 cup white sugar, and melted butter together in a large bowl with a wooden spoon until smooth. Stir in egg and vanilla. Blend in flour mixture until just combined, then stir in apple and walnuts. Spread mixture evenly into the prepared pan and sprinkle cinnamon-sugar mixture over top.</li>
+        <li>Bake in the preheated oven until the top springs back when lightly pressed, 25 to 30 minutes. Let cool completely in the pan before cutting into 16 squares.</li>
+    </ol>
+    <div>
+    <a href="../index.html">Go Back</a>
+    </div>
 </body>
 </html>
