--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <h1>Odin Recipes</h1>
     <p>The document contains collected recipes with apples as main ingredient!</p>
-    <img src="./images/appleBasket.jpg" alt="apples">
+    <img src="./images/appleBasket.jpg" alt="apples" height="500px">
     <div>
-        <ul><a href="appleSquares.html">Apple Squares</a></ul>
-        <ul><a href="appleLiqueur.html">Apple Liqueur</a></ul>
-        <ul><a href="appleButter.html">Apple Butter</a></ul>
+        <ul><a href="./recipes/appleSquares.html">Apple Squares</a></ul>
+        <ul><a href="./recipes/appleLiqueur.html">Apple Liqueur</a></ul>
+        <ul><a href="./recipes/appleButter.html">Apple Butter</a></ul>
     </div>
 </body>
 </html>
