appleButter html body done

--- a/recipes/appleButter.html
+++ b/recipes/appleButter.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Apple Butter | Odin Recipes</title>
 </head>
 <body>
-    
+    <h1>Apple Butter</h1>
+    <img src="../images/appleButter.jpg" height="500px">
+    <p>Move over, apple sauce. Apple butter is basically a spreadable apple pie filling, only better. Though cooking time is long, it's super easy and pretty hands-free. Pair it with some sharp Cheddar on a cheese plate, or slather it onto cheesy biscuits (see footnote). Other approved uses include spreading between the layers of a spice cake, filling seasonably appropriate thumbprint cookies, or even as a condiment for pork chops.</p>
+    <h2>ingredients</h2>
+    <ul>
+        <li>5 pounds Granny Smith apples, cored and cut into 1-inch pieces</li>
+        <li>1 ½ cups white sugar</li>
+        <li>½ cup brown sugar</li>
+        <li>1 teaspoon salt</li>
+        <li>2 teaspoons ground cinnamon</li>
+        <li>⅛ teaspoon freshly grated nutmeg</li>
+        <li>½ teaspoon ground allspice</li>
+        <li>¼ cup apple cider vinegar</li>
+        <li>1 splash water</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Place apple pieces into a large slow cooker. Add white sugar, brown sugar, salt, cinnamon, nutmeg, allspice, and vinegar. Add a splash of water and mix well</li>
+        <li>Cover and cook on High until apples are starting to soften and release liquid, 1 to 2 hours. Reduce heat to Low and cook, uncovered, until all the apple flesh is dissolved, 5 to 6 hours. Stir occasionally</li>
+        <li>Puree using an immersion blender until smooth. Continue cooking, stirring occasionally, until darkened and thick, about 4 hours more. Pass apple butter through a strainer if desired. Seal in a glass container and refrigerate until cool</li>
+    </ol>
+    <div>
+        <a href="../index.html">Go Back</a>
+    </div>
 </body>
 </html>
