appleLiqueur html body done

--- a/recipes/appleLiqueur.html
+++ b/recipes/appleLiqueur.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Apple Liqueur | Odin Recipes</title>
 </head>
 <body>
-    
+    <h1>Apple Liqueur</h1>
+    <img src="../images/appleLiqueur.jpg" height="500px">
+    <p>This apple pie moonshine is delish!</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>½ gallon apple cider</li>
+        <li>½ gallon apple juice</li>
+        <li>1 cup white sugar</li>
+        <li>1 cup brown sugar</li>
+        <li>4 cinnamon sticks</li>
+        <li>1 whole clove</li>
+        <li>3 cups 190 proof grain alcohol</li>
+        <li>2 cups vanilla vodka</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Place apple cider, apple juice, white sugar, brown sugar, cinnamon sticks, and whole clove in a large pot over high heat. Bring to a boil, then reduce heat to medium-low and simmer for 20 minutes. Remove from heat and allow to cool completely.</li>
+        <li>Stir grain alcohol and vanilla vodka into the cooled mixture. Pour into clean bottles or jars; store in the refrigerator.</li>
+    </ol>
+    <div>
+        <a href="../index.html">Go Back</a>
+    </div>
 </body>
 </html>
