minor changes and corrections

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1>Odin Recipes</h1>
     <p>The document contains collected recipes with apples as main ingredient!</p>
     <img src="./images/appleBasket.jpg" alt="apples" height="500px">
-    <div>
-        <ul><a href="./recipes/appleSquares.html">Apple Squares</a></ul>
-        <ul><a href="./recipes/appleLiqueur.html">Apple Liqueur</a></ul>
-        <ul><a href="./recipes/appleButter.html">Apple Butter</a></ul>
-    </div>
-</body>
+    <ul>
+        <li><a href="./recipes/appleSquares.html">Apple Squares</a></li>
+        <li><a href="./recipes/appleLiqueur.html">Apple Liqueur</a></li>
+        <li><a href="./recipes/appleButter.html">Apple Butter</a></li>
+    </ul>
+    </body>
 </html>
